...
                                <rect key="frame" x="92.999999999999986" y="59" width="211.66666666666663" height="33.666666666666657"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photo Your Food!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nu3-KZ-2ls">
                                        <rect key="frame" x="0.0" y="0.0" width="211.66666666666666" height="33.666666666666664"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
...
                                <rect key="frame" x="132" y="346" width="133.66666666666663" height="202.33333333333337"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingredient 1" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dl8-aQ-95M">
                                        <rect key="frame" x="0.0" y="0.0" width="133.66666666666666" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingredient 2" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E0z-8I-Nak">
                                        <rect key="frame" x="0.0" y="42" width="133.66666666666666" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingredient 3" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xWf-a6-M8V">
                                        <rect key="frame" x="0.0" y="84" width="133.66666666666666" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingredient 4" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="69f-ha-67d">
                                        <rect key="frame" x="0.0" y="126" width="133.66666666666666" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                                        <rect key="frame" x="0.0" y="168" width="133.66666666666666" height="34.333333333333343"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Search"/>
                                        <connections>
                                            <action selector="searchTap:" destination="aas-ZZ-aD6" eventType="touchUpInside" id="cc8-yg-WrR"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="157.66666666666666" height="34.333333333333336"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Search by Photos"/>
                                        <connections>
                                            <action selector="cameraButton:" destination="aas-ZZ-aD6" eventType="touchUpInside" id="OHZ-gd-qSh"/>
...
                                        <rect key="frame" x="0.0" y="34.333333333333371" width="157.66666666666666" height="34.333333333333343"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="My Recipes"/>
                                        <connections>
                                            <action selector="favoritesButton:" destination="aas-ZZ-aD6" eventType="touchUpInside" id="jgg-TP-wmo"/>
...
                                <rect key="frame" x="124.99999999999999" y="284" width="147.66666666666663" height="29"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Diet" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="RoY-f4-QVP">
                                        <rect key="frame" x="0.0" y="0.0" width="26.333333333333332" height="29"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HrZ-JA-ti2" userLabel="DietFilter">
                                        <rect key="frame" x="26.333333333333336" y="0.0" width="121.33333333333331" height="29"/>
                                        <accessibility key="accessibilityConfiguration" identifier="DietFilter" label="DietFilter"/>
...
                                <rect key="frame" x="233" y="247" width="39" height="29"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zoj-W9-2u7" userLabel="FoodFilter">
                                        <rect key="frame" x="0.0" y="0.0" width="39" height="29"/>
                                        <accessibility key="accessibilityConfiguration" identifier="FoodFilter" label="FoodFilter"/>
...
                                </subviews>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Food Type" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0xA-Pu-DDQ">
                                <rect key="frame" x="125" y="247" width="68" height="29"/>
