...
    
    func setUpFoodFilterButton(){
        
        let typeChoices = {(action: UIAction)
            in print(action.title)}
        foodFilterButton.menu = UIMenu(children: [
            UIAction(title: "None", state: .on, handler: typeChoices),
            UIAction(title: "Breakfast", handler: typeChoices),
            UIAction(title: "Lunch", handler: typeChoices),
            UIAction(title: "Dinner", handler: typeChoices),
            UIAction(title: "Dessert", handler: typeChoices)])
        foodFilterButton.showsMenuAsPrimaryAction = true
        foodFilterButton.changesSelectionAsPrimaryAction = true
    }
    
    func setUpDietFilterButton(){
        
        let dietChoices = {(action: UIAction)
            in print(action.title)}
        dietFilterButton.menu = UIMenu(children: [
            UIAction(title: "None", state: .on, handler: dietChoices),
            UIAction(title: "Vegetarian", handler: dietChoices),
            UIAction(title: "Vegan", handler: dietChoices),
            UIAction(title: "Gluten-Free", handler: dietChoices),
            UIAction(title: "Dairy-Free", handler: dietChoices),])
        dietFilterButton.showsMenuAsPrimaryAction = true
        dietFilterButton.changesSelectionAsPrimaryAction = true
    }
    
    @IBAction func searchTap(_ sender: Any) {
        presenter.foodFilter = foodFilterButton.currentTitle
...
