...
        tableView.deselectRow(at: indexPath, animated: true)
        let item = models[indexPath.row]
    
        let sheet = UIAlertController(title: "Edit",
                                      message: nil,
                                      preferredStyle: .actionSheet)
        sheet.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
        sheet.addAction(UIAlertAction(title: "Edit", style: .default, handler: { _ in
            let alert = UIAlertController(title: "Edit Recipe",
                                          message: "Enter your recipe",
                                          preferredStyle: .alert)
            alert.textFields?.first?.text = item.name
            alert.addTextField(configurationHandler: nil)
            alert.addAction(UIAlertAction(title: "Save", style: .cancel, handler: {[weak self] _ in
                guard let field = alert.textFields?.first, let newName = field.text, !newName.isEmpty else {
                    return
                }
                self?.updateRecipe(item: item, newName: newName, newInstructions: "", newNotes: "")
            }))
            self.present(alert, animated: true)
...
